tests/test_bool/bad/output/test_xor_with_int.catala_en.TestXorWithInt.Interpret
[ERROR] Error during typechecking, incompatible types:
--> bool
--> integer

Error coming from typechecking the following expression:
 --> test_bool/bad/test_xor_with_int.catala_en
  | 
8 |   definition test_var equals 10 xor 20
  |                              ^^^^^^^^^
  + 'xor' should be a boolean operator

Type bool coming from expression:
 --> test_bool/bad/test_xor_with_int.catala_en
  | 
8 |   definition test_var equals 10 xor 20
  |                                 ^^^
  + 'xor' should be a boolean operator

Type integer coming from expression:
 --> test_bool/bad/test_xor_with_int.catala_en
  | 
8 |   definition test_var equals 10 xor 20
  |                              ^^
  + 'xor' should be a boolean operator
